<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet_gray"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_bottom_sheet_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1.5x"
        android:drawablePadding="@dimen/spacing_0.5x"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.YFC.Subheading7"
        android:textColor="@color/text_gray"
        app:drawableStartCompat="@drawable/ic_calendar_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:drawablePadding="@dimen/spacing_0.5x"
        android:enabled="true"
        android:text="@string/set_date"
        android:textAppearance="@style/TextAppearance.YFC.Subheading1"
        android:textColor="@color/color_set_date_time"
        app:layout_constraintBottom_toBottomOf="@id/date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/date_label"
        app:layout_constraintTop_toTopOf="@id/date_label" />

    <View
        android:id="@+id/separator1"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:background="@color/grey_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:drawablePadding="@dimen/spacing_0.5x"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.YFC.Subheading7"
        android:textColor="@color/text_gray"
        app:drawableStartCompat="@drawable/ic_clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:drawablePadding="@dimen/spacing_0.5x"
        android:enabled="false"
        android:text="@string/set_time"
        android:textAppearance="@style/TextAppearance.YFC.Subheading1"
        android:textColor="@color/color_set_date_time"
        app:layout_constraintBottom_toBottomOf="@id/time_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/time_label"
        app:layout_constraintTop_toTopOf="@id/time_label" />

    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:background="@color/grey_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/repeat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:drawablePadding="@dimen/spacing_0.5x"
        android:text="@string/repeat"
        android:textAppearance="@style/TextAppearance.YFC.Subheading7"
        android:textColor="@color/text_gray"
        app:drawableStartCompat="@drawable/ic_repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/repeat_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_1x"
        android:checked="false"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@id/repeat_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/repeat_label"
        app:layout_constraintTop_toTopOf="@id/repeat_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_main"
        style="@style/Widget.YFC.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1.5x"
        android:enabled="false"
        android:text="@string/block_time_slot"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/repeat_label" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/spacing_0.625x" />

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:progress="20" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>