<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet_gray"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_bottom_sheet_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        android:id="@+id/user_profile"
        layout="@layout/view_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        app:layout_constraintBottom_toTopOf="@id/input_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_container"
        style="@style/Widget.YFC.EditText"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:background="@drawable/edit_text_search_line_background_normal"
        android:focusable="true"
        android:gravity="top"
        android:hint="@string/leave_us_a_note"
        android:maxLength="350"
        android:maxLines="10"
        android:paddingVertical="@dimen/spacing_0.5x"
        app:layout_constraintBottom_toTopOf="@id/spacer"
        app:layout_constraintTop_toBottomOf="@id/user_profile" />

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_1.5x"
        app:layout_constraintBottom_toTopOf="@id/action_main"
        app:layout_constraintTop_toBottomOf="@id/input_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_main"
        style="@style/Widget.YFC.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginBottom="@dimen/spacing_0.25x"
        android:text="@string/confirm_booking"
        app:layout_constraintBottom_toTopOf="@id/action_secondary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_secondary"
        style="@style/Widget.YFC.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:background="@color/white_transparent"
        android:text="@string/decline_request"
        android:textColor="@color/issue_red"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/spacing_0.625x" />

</androidx.constraintlayout.widget.ConstraintLayout>